fixed scrollbar in firefox

--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -24,13 +24,13 @@
 }
 
 
-/* html {
+html {
     scrollbar-width: none;
 }
 
 body {
     overflow-x: hidden;
-} */
+}
 
 
 
